# word2vec-implementation

./: README.md  example.py  logger_config.py  pyproject.toml  text_example.txt  word2vec_implementation.py
src/: example.py  utils.py  word2vec_implementation.py
src/config/: constants.py  logger_config.py  text_example.txt
tests/: test_dimensions.py  test_initialization.py
